[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "satkit"
author = "Egemen Imre"
description-file = "README.md"
home-page = "https://github.com/egemenimre/satkit/"
keywords = "satellite,satellite design,mission analysis,aerospace,engineering,astrodynamics,orbits,orbital mechanics"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

requires = [
    "numpy",
    "orekit",
    "pint",
    "scipy",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
doc = ["sphinx"]

[tool.flit.metadata.urls]
Documentation = "https://satkit.readthedocs.io/en/latest/"